fix(hangar): role labels spacing is now correct

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,7 @@ a.thumbnail.active {
     top: 8px;
   }
 }
+
+.label {
+  display: inline-block;
+}
